cli001 Collection can get indexes in folder

--- a/scrum/backlog/cli001.md
+++ b/scrum/backlog/cli001.md
@@ -5,7 +5,7 @@ Status: Ready
 
 # Description
 
-Cards go in `scrum/cards`. Collections go in `scrum/collections`.
+A basic collection is a folder in the `scrum` folder containing md cards.
 
 By default, all cards are in the inventory. There's no filters being applied at the moment.
 
@@ -20,8 +20,10 @@ Property 2: Value
 
 or by the text following a hash header with.
 
+A card's index is currently its filename.
+
 # Cucumber
 
-**GIVEN** a collection of cards, and a collection file _C_.
+**GIVEN** a collection of cards, and a collection folder _C_.
 **WHEN** `sbl C` is run.
 **THEN** a table showing the index and description all the cards in the collection is shown.
