cli002 Made card ready

--- a/scrum/backlog/cli002.md
+++ b/scrum/backlog/cli002.md
@@ -1,4 +1,23 @@
 ---
 Summary: Read config file
-Status: Not Fully Defined
+Status: Ready
 ---
+
+# Description
+
+Settings can be stored in `.scrum.toml`, `scrum.toml` or as part of `pyproject.taml`. In all cases, under the `[tools.scrummd]` heading.
+
+Initial settings that must be supported are
+
+| Setting    | Description                                                           |
+| ---------- | --------------------------------------------------------------------- |
+| strict     | Fail on any issue with the collection rather than trying to persevere |
+| scrum_path | Path of the scrum cards/meta                                          |
+
+# Cucumber
+
+**GIVEN** settings stored in one of the config files
+
+**WHEN** any part of scrummd is run
+
+**THEN** the stored settings are used
