--- a/scrum/backlog/cli007.md
+++ b/scrum/backlog/cli007.md
@@ -1,4 +1,8 @@
 ---
-Summary: Output all of a card with sbl
-Status: Not Fully Defined
+Summary: Output all of a card with scard
+Status: Ready
 ---
+
+# Description
+
+When `scard` is called with a card number, display all the fields of that card.
