--- a/scrum/backlog/cli002.md
+++ b/scrum/backlog/cli002.md
@@ -5,7 +5,7 @@ Status: Done
 
 # Description
 
-Settings can be stored in `.scrum.toml`, `scrum.toml` or as part of `pyproject.taml`. In all cases, under the `[tools.scrummd]` heading.
+Settings can be stored in `.scrum.toml`, `scrum.toml` or as part of `pyproject.taml`. In all cases, under the `[tool.scrummd]` heading.
 
 Initial settings that must be supported are
 
