--- a/scrum/backlog/cli009.md
+++ b/scrum/backlog/cli009.md
@@ -7,9 +7,33 @@ Status: Ready
 
 When a `tags` or `collections` field is present, it should also be added to those collections for the sake of `sbl` and other commands.
 
-If there is a property styled field, it should accept `;` or `,` to separate them.
+If there is a property styled field or a header style field, it should accept one tag per line, starting (following whitespace trim) with `-` ('bullet-point list style')
 
-If there is a header style field, it should accept one tag per line, starting with `-` ('bullet-point list style')
+# Examples
+
+### Property
+
+```md
+---
+Summary: Example
+Tags:
+    - tag1
+    - tag2
+---
+```
+
+### Header
+
+```md
+---
+Summary: Example 2
+---
+
+# Tags
+
+-   tag1
+-   tag2
+```
 
 # Cucumber
 
