--- a/scrum/backlog/cli011.md
+++ b/scrum/backlog/cli011.md
@@ -5,7 +5,7 @@ Status: Ready
 
 # Description
 
-When a card contains an identifier to another card, or a list of other cards in a field, allow those to be treated as collections. For instance:
+When a card contains an identifier to another card, or a list of other cards in a field, allow those to be treated as collections. When a card contains a field called 'items', those items are added to a collection with the same index as the card. For instance:
 
 ```md
 ---
@@ -17,12 +17,21 @@ Index: card0
 
 -   [[card1]]
 -   [[card2]]
+
+# Items
+
+-   [[card3]]
+-   [[card4]]
 ```
 
-would create a collection `card0.depends` which would have the cards `card1` and `card2` in it.
+would create a collection `card0.depends` which would have the cards `card1` and `card2` in it, as well as a collection `card0`.
 
 # Cucumber
 
 **GIVEN** a field of a card containing card(s) within double square brackets
 **WHEN** that field is searched as a collection by `sbl`
+**THEN** those cards are returned
+
+**GIVEN** a field 'Items' of a card containing card(s) within double square brackets
+**WHEN** the card index is searched as a collection by `sbl`
 **THEN** those cards are returned
