cli011 Create unit tests

--- a/scrum/backlog/cli011.md
+++ b/scrum/backlog/cli011.md
@@ -1,6 +1,6 @@
 ---
 Summary: Allow categories in other cards from being listed in field of a card
-Status: Ready
+Status: In Progress
 ---
 
 # Description
@@ -25,6 +25,8 @@ Index: card0
 ```
 
 would create a collection `card0.depends` which would have the cards `card1` and `card2` in it, as well as a collection `card0`.
+
+For now, the level of header is ignored.
 
 # Cucumber
 
