cli011 Done, documented

--- a/scrum/backlog/cli011.md
+++ b/scrum/backlog/cli011.md
@@ -1,6 +1,6 @@
 ---
 Summary: Allow categories in other cards from being listed in field of a card
-Status: In Progress
+Status: Done
 ---
 
 # Description
