cli004 Configure sbl columns from config or args

--- a/scrum/backlog/cli004.md
+++ b/scrum/backlog/cli004.md
@@ -1,6 +1,6 @@
 ---
 Summary: Customize columns in sbl by multiple views in config and meta
-Status: Ready
+Status: Done
 ---
 
 # Description
@@ -18,3 +18,7 @@ Allow a `--columns=`/`-c` with a comma separated list that will override the col
 **GIVEN** a `columns` param with comma separated fields
 **WHEN** `sbl` is run
 **THEN** the columns are shown
+
+# Implementation note
+
+No unit test exists for this yet.
