cli017 Bare path mode for sbl

--- a/scrum/backlog/cli017.md
+++ b/scrum/backlog/cli017.md
@@ -1,11 +1,11 @@
 ---
 Summary: `sbl` relative file path output only
-Status: Ready
+Status: Done
 ---
 
 # Description
 
-We want to be able to just list the paths of all the cards that `sbl` returns when `sbl -p` or `sbl --paths` is called. The idea is that you'll be able to call
+We want to be able to just list the paths of all the cards that `sbl` returns when `sbl -b` or `sbl --bare` is called. The idea is that you'll be able to call
 
 ```
 vim `sbl scrum1`
@@ -22,9 +22,13 @@ We want to add the `_path` field as well, so it can be used in other queries.
 # Cucumber
 
 **GIVEN** a collection of cards
-**WHEN** `sbl` is called with the `-p` or `--paths` parameter
+**WHEN** `sbl` is called with the `-b` or `--bare` parameter
 **THEN** the paths of all cards in the collection are returned with no other data - including no headers.
 
 **GIVEN** a column configuration including the `_path` field
 **WHEN** `sbl` is called
 **THEN** then the path of the card is shown
+
+# Implementation note
+
+No unit test exists for this actual output yet. I'm not really happy enough with output to test for it.
