cli021 Move all non-essential fields to udf in Card
Included significant refactor, but allowed all type errors to be removed

--- a/scrum/v0-1.md
+++ b/scrum/v0-1.md
@@ -4,13 +4,13 @@ Summary: Items remaining to include in v0.1
 
 # Items
 
-Features
+## Features
 
 -   [[cli021]]
 -   [[cli022]]
 -   [[cli023]]
 -   [[cli024]]
 
-Bugs
+## Bugs
 
 -   [[cli019]]
