cli024 Mark as Done

--- a/scrum/backlog/cli024.md
+++ b/scrum/backlog/cli024.md
@@ -1,6 +1,6 @@
 ---
 Summary: Allow config for collection
-Status: Ready
+Status: Done
 ---
 
 # Description
@@ -39,8 +39,7 @@ GIVEN a 'collections' field in the config
 WHEN there is a config field
 THEN the config field applies to that collection
 
-GIVEN a 'collections' field in the config
-WHEN there is a list type field
-THEN the list type field is appended to any parent list fields instead of
-    replacing
+# Implementation notes
 
+This has only been done for specific fields - so, initially, fields and
+requirements.
