cli026 Fleshed out card

--- a/scrum/backlog/cli026.md
+++ b/scrum/backlog/cli026.md
@@ -1,4 +1,11 @@
 ---
 Summary: `sbl -b` gives blank output
-Status: Not fully defined
+Status: Ready
 ---
+
+# Description
+
+`sbl -b` is supposed to provide the filenames of all cards in a collection
+without headings per [[cli017]]. It doesn't any more.
+
+Only requirement is that [[cli017]] works again.
