cli023 Allow filtering with --include in sbl
Includes filters in collection

--- a/scrum/backlog/cli023.md
+++ b/scrum/backlog/cli023.md
@@ -1,6 +1,6 @@
 ---
 Summary: Equals filter
-Status: Ready
+Status: Done
 ---
 
 # Description
@@ -15,9 +15,13 @@ For this card, the user should be able to filter by a field equalling something 
 **WHEN** `sbl --include [FIELD]=[VALUE]` is run
 **THEN** then only cards where the FIELD equals the VALUE
 
+**GIVEN** an include statement
+**WHEN** `[VALUE]` contains multiple values separated by a comma
+**THEN** then cards that match any of the values are included (OR)
+
 **GIVEN** a scrum repository
 **WHEN** `sbl` is run with multiple `--include` arguments
-**THEN** then cards that match any of the include statements are included
+**THEN** then cards that match all of the include statements are included
 
 # Clarifications
 
