cli019 Added (failing) test

--- a/scrum/backlog/cli019.md
+++ b/scrum/backlog/cli019.md
@@ -1,6 +1,6 @@
 ---
 Summary: String property after list property fails to be added to fields
-Status: Ready
+Status: In Progress
 ---
 
 # Description
