--- a/scrum/backlog/cli034.md
+++ b/scrum/backlog/cli034.md
@@ -1,25 +1,23 @@
 ---
-Summary: Allow reference card without collecting it
-Status: Ready
+Summary: Show scrum board on console
+Status: In Progress
 ---
 
 # Description
 
-Where we've got a card reference appearing in the text of a field, we add it
-to an implicit collection - to allow, for instance, creating an ordered backlog
-on a card as a collection. Sometimes - we might want to refer to the card in
-the description of the card, but not actually add it to the collection.
+Having a scrum-board like output would vastly improve the experience of Scrum
+ceremonies with ScrumMD.
 
-The goal is that by permitting `[[!card_index]]` (with the exclamation point)
-that the reference will still be recognised, but the card not be added to the
-collection.
+This is going to be in two forms:
 
-# Cucumber
+`sbl --output board --group-by [something]`
 
-**GIVEN** a field containing a card reference in the form `[[!card_index]]`
-**WHEN** that field is displayed
-**THEN** the reference is formatted per the active configuration
+and
 
-**GIVEN** a card containing a card reference in the form `[[!card_index]]`
-**WHEN** that cards collection is retrieved
-**THEN** the card is not in the collection
+`sboard`
+
+The latter will function as an alias for the former, but have default group-by
+and columns set separately in the configuration.
+
+We support multiple `group-by` statements, with only the last showing
+horizontally. This allows you to use them as 'swim lanes'.
