Restructure scrum cards

--- a/scrum/stories/cli015.md
+++ b/scrum/stories/cli015.md
@@ -1,6 +1,7 @@
 ---
 Summary: Show scrum board
-Status: Not fully defined
+Status: Descoped
+Descope Reason: Duplicate
 ---
 
 # Description
@@ -8,3 +9,7 @@ Status: Not fully defined
 Show the scrum board for a collection when `sboard <collection>` is typed.
 
 Filters can come later
+
+# Duplicates
+
+[[cli034]]
