cli028 Mark card done

--- a/scrum/stories/cli028.md
+++ b/scrum/stories/cli028.md
@@ -1,6 +1,6 @@
 ---
 Summary: Allow underline header styles
-Status: Ready
+Status: Done
 ---
 
 # Description
@@ -12,8 +12,7 @@ fields.
 Example
 
 ```markdown
-Field Name
-----------
+## Field Name
 
 Value of field.
 ```
