Card updates during stand-up

--- a/scrum/techdebt/cli031.md
+++ b/scrum/techdebt/cli031.md
@@ -1,6 +1,6 @@
 ---
 Summary: Modify sphinx doco to generate output from examples
-Status: Ready
+Status: In Progress
 Tags:
     - Tech Debt
 ---
@@ -13,3 +13,7 @@ means that they won't be consistent with changes.
 
 This card is to change all of those references to actually run the various CLI
 utilities to provide examples of their output when doco is generated.
+
+# Depends
+
+- [[cli032]]
