--- a/scrum/stories/cli032.md
+++ b/scrum/stories/cli032.md
@@ -1,12 +1,12 @@
 ---
 Summary: Write access to property on cards
-Status: Ready
+Status: In Progress
 ---
 
 # Description
 
 Goal is to allow setting property fields on cards from the command line
-directly. This means you'll be able to go `sprop c1 assignee=lachlan` to set
+directly. This means you'll be able to go `swrite c1 assignee=lachlan` to set
 the assignee of c1 to Lachlan.
 
 For now - this will only work with property style fields.
@@ -14,5 +14,5 @@ For now - this will only work with property style fields.
 # Cucumber
 
 **GIVEN** a card
-**WHEN** `sprop [card number] [key]=[value]` is run
+**WHEN** `swrite [card number] [key]=[value]` is run
 **THEN** a property named by the key is set to the value in the card
