Updates and new skeleton cards related to templating and editing

--- a/scrum/stories/cli036.md
+++ b/scrum/stories/cli036.md
@@ -13,3 +13,8 @@ using stdin for the value. Use the `-i` or `--input` flag.
 **GIVEN** a card
 **WHEN** `cat <file> | swrite [card number] [key] -i` is run
 **THEN** a field named by the key is set to the value inputted in the file
+
+**GIVEN** a card
+**WHEN** `swrite [card1] -c [card2] [key]=[value]` is run
+**THEN** a field named by the key is set to the value inputted in the file on
+all cards is set
