Update cards to done

--- a/scrum/stories/cli037.md
+++ b/scrum/stories/cli037.md
@@ -1,6 +1,6 @@
 ---
 Summary: Write to mutiple cards
-Status: Ready
+Status: Done
 ---
 
 # Description
@@ -13,6 +13,6 @@ Any remaining cards must be explicit.
 # Cucumber
 
 **GIVEN** a card
-**WHEN** `swrite [card1] -c [card2] [key]=[value]` is run
+**WHEN** `swrite [card1] -c [card2] -s [key] [value]` is run
 **THEN** a field named by the key is set to the value inputted in the file on
 all cards is set
