--- a/scrum/stories/cli039.md
+++ b/scrum/stories/cli039.md
@@ -1,12 +1,12 @@
 ---
 Summary: Output `scard` with jinja2 template
-Status: In Progress
+Status: Done
 ---
 
 # Description
 
 In order to write, we need jinja2 output. If we're going to do that, we might as
-well get it in scard and sbl too
+well get it in scard too.
 
 Add to config as `default_template` in `scard`
 
