cli038 Flesh out card

--- a/scrum/stories/cli038.md
+++ b/scrum/stories/cli038.md
@@ -1,9 +1,19 @@
 ---
 Summary: Modify list in swrite
-Status: Not Fully Defined
+Status: In Progress
 ---
 
 # Description
 
 Goal is to be able to append or remove from lists in fields without having to
 give the whole value each time.
+
+# Cucumber
+
+**GIVEN** a card
+**WHEN** `swrite` is called with `-a listname data`
+**THEN** `data` is added to the list field `listname`
+
+**GIVEN** a card
+**WHEN** `swrite` is called with `-d listname data`
+**THEN** `data` is removed from the list field `listname`
