cli046 Capture code blocks as components
Prevents [[cards]] being expanded, and allows custom formatting.

--- a/scrum/stories/cli046.md
+++ b/scrum/stories/cli046.md
@@ -6,3 +6,5 @@ Status: In Progress
 # Description
 
 - Fix to scard default template with lists
+- Fix to card references inside code blocks being output as card
+- Fix to card references inside code blocks being output as collection
