cli046 Update Card

--- a/scrum/stories/cli046.md
+++ b/scrum/stories/cli046.md
@@ -1,10 +1,12 @@
 ---
-Summary: Little fixes
-Status: In Progress
+Summary: Extract code blocks/quotes as components
+Status: Done
 ---
 
 # Description
 
-- Fix to scard default template with lists
 - Fix to card references inside code blocks being output as card
 - Fix to card references inside code blocks being output as collection
+- (also Fix to scard default template with lists)
+- Make code blocks/quotes available to templates
+- Add to default templates
