--- a/scrum/stories/cli040.md
+++ b/scrum/stories/cli040.md
@@ -1,4 +1,17 @@
 ---
-Summary: Provide per-collection output templates
-Status: Not fully defined
+Summary: Search collection path for default template
+Status: Ready
 ---
+
+# Description
+
+Customize default templates for specific collections.
+
+Define a collection specific template by adding a default_md.j2 or default_scard.j2 (or default per configuration) to:
+
+- `<collection>/<template name>.j2`
+- `<collection>/templates/<template name>.j2`
+- `<collection>/.templates/<template name.j2>`
+
+When `scard` runs, use the first template found from this list, then apply the normal default rules.
+
