--- a/scrum/stories/cli044.md
+++ b/scrum/stories/cli044.md
@@ -1,6 +1,6 @@
 ---
 Summary: Create `snew` to create a new card
-Status: Not fully defined
+Status: Ready
 ---
 
 # Description
@@ -10,13 +10,24 @@ Currently, cards are created manually in a text editor. This is to create an
 
 It needs to:
 
--   Accept optional positional argument `collection` that defined which folder it's in
+-   Accept optional positional argument `collection` that defined which folder it's in. Default to `default_collection` in the config, which defaults to the root.
 -   Accept optional argument `--prefix`/`-p` for the prefix to the card, or use the default prefix for the collection
 -   Create a prefix config option in the scrum config
--   Create a prefix config option for collections in the scrum config
--   Default to `c` if there is no prefix
 -   Create a default template option in the scrum config
--   Create a default template option for colletions in the scrum config
--   Allow mandatory fields to be set with `swrites` `=` syntax
+-   Create a prefix config option for collections in the scrum config (in `[collections.<collection_name>.snew]`)
+-   Create a default template option for colletions in the scrum config (as above)
+-   Default to `c` if there is no prefix
+-   Allow mandatory fields to be set with `swrites` `-s` syntax
 -   Allow the whole card to be piped in to stdin
 -   Allow `-e` to open the editor for a new card
+-   Define default editor from:
+    - Config `[tools.scrummd] default_editor`
+    - `SCRUM_EDITOR` env variable
+    - `GIT_EDITOR` (or whatever it is) env variable
+    - vim
+-   Create a default template which is
+```
+Summary: 
+```
+
+Any config refers to `[tools.scrummd.snew]`.
